# Dexory

./: CMakeLists.txt  README.md
include/: asset_id.h  digit.h  exporter.h  mock_exporter.h  png_exporter.h  text_exporter.h
results/: stdout.txt
src/: asset_id.cpp  digit.cpp  main.cpp  png_exporter.cpp  text_exporter.cpp
test/: test_asset_id.cpp  test_digit.cpp  test_png_exporter.cpp  test_text_exporter.cpp
